feat: 实现GAM-RAG标准化与检索路由优化
refactor(记忆检索): 重构MemoryService接口，增加全局向量索引重建能力
feat(路由决策): 在MemoryRetrievalEvent中新增路由决策和增益值字段
docs: 更新前后端Agent指南文档内容
style: 优化前端侧边栏滚动条样式和会话创建逻辑
test: 添加MemoryServiceImpl路由策略单元测试